colour contrast fixes

--- a/src/styles/scss/Form.scss
+++ b/src/styles/scss/Form.scss
@@ -1,5 +1,5 @@
 $primary-text-color: #484848;
-$primary-color: #39b54a;
+$primary-color: #35A744;
 $primary-color-variant: #c4c4c4;
 $primary-background: #fff;
 $primary-dark: #000;
