--- a/src/styles/scss/Nav.scss
+++ b/src/styles/scss/Nav.scss
@@ -1,6 +1,6 @@
 @import "./helpers/lists";
 $primary-text-color: #484848;
-$primary-color: #39b54a;
+$primary-color: #35A744;
 $light-text-color: #fff;
 
 button {
