--- a/src/styles/scss/SearchResults.scss
+++ b/src/styles/scss/SearchResults.scss
@@ -1,4 +1,4 @@
-$primary-color: #39b54a;
+$primary-color: #35A744;
 $light-text-color: #fff;
 $light-color: #ccc;
 
